--- a/package.json
+++ b/package.json
@@ -1,6 +1,12 @@
 {
+  "scripts": {
+    "dev-install": "npm install -D",
+    "start": "$(npm bin)/parcel index.html",
+    "build": "$(npm bin)/parcel build -d public index.html"
+  },
   "devDependencies": {
     "elm-hot": "^1.0.1",
-    "node-elm-compiler": "^5.0.3"
+    "node-elm-compiler": "^5.0.3",
+    "parcel": "1.12.0"
   }
 }
