--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "devDependencies": {
     "elm-hot": "^1.0.1",
     "node-elm-compiler": "^5.0.3",
-    "parcel": "1.12.0"
+    "parcel": "1.12.0",
+    "sass": "^1.17.4"
   }
 }
