--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "scripts": {
     "dev-install": "yarn install -D",
-    "start": "$(yarn bin)/parcel index.html",
-    "build": "$(yarn bin)/parcel build -d public index.html"
+    "start": "parcel index.html",
+    "build": "parcel build -d public index.html",
+    "deploy": "yarn run build && netlify deploy --prod"
   },
   "devDependencies": {
     "elm-hot": "^1.0.1",
+    "netlify-cli": "^2.10.0",
     "node-elm-compiler": "^5.0.3",
     "parcel": "1.12.0",
     "sass": "^1.17.4"
