--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "node-elm-compiler": "^5.0.3",
     "parcel": "1.12.0",
     "sass": "^1.17.4"
+  },
+  "dependencies": {
+    "core-js": "3"
   }
 }
