--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "devDependencies": {
     "elm-format": "^0.8.1",
     "elm-hot": "^1.0.1",
+    "elm-test": "^0.19.0",
     "netlify-cli": "^2.10.0",
     "node-elm-compiler": "^5.0.3",
     "parcel": "1.12.0",
