--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,9 @@ node_js:
 before_install:
   - curl -o- -L https://yarnpkg.com/install.sh | bash -s -- --version 1.15.2
   - export PATH="$HOME/.yarn/bin:$PATH"
+  - yarn global add elm
 
 script:
   - yarn
+  - yarn test
   - yarn run check-format
