--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "scripts": {
     "dev-install": "yarn install -D",
     "start": "parcel index.html",
+    "test": "elm-test",
     "check-format": "elm-format --validate src/*",
     "build": "parcel build -d public index.html",
     "deploy": "yarn run build && netlify deploy --prod"
@@ -9,7 +10,7 @@
   "devDependencies": {
     "elm-format": "^0.8.1",
     "elm-hot": "^1.0.1",
-    "elm-test": "^0.19.0",
+    "elm-test": "^0.19.0-rev6",
     "netlify-cli": "^2.10.0",
     "node-elm-compiler": "^5.0.3",
     "parcel": "1.12.0",
