--- a/.travis.yml
+++ b/.travis.yml
@@ -8,9 +8,8 @@ node_js:
 before_install:
   - curl -o- -L https://yarnpkg.com/install.sh | bash -s -- --version 1.15.2
   - export PATH="$HOME/.yarn/bin:$PATH"
-  - yarn global add elm
 
 script:
-  - yarn
+  - yarn run dev-install
   - yarn test
   - yarn run check-format
