--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
     "elm-test": "^0.19.0-rev6",
     "netlify-cli": "^2.10.0",
     "node-elm-compiler": "^5.0.3",
-    "parcel": "1.12.0",
     "sass": "^1.17.4"
   },
   "dependencies": {
-    "core-js": "3"
+    "core-js": "3",
+    "elm": "^0.19.0-bugfix6",
+    "parcel": "^1.12.3"
   }
 }
